<resources>
    <string name="app_name">Microsoft Band Live</string>
    <string name="about">About</string>
    <string name="status_text_disabled">Click start to connect.</string>
    <string name="button_text_disabled">Start!</string>
    <string name="button_text_enabled">Running... tap to stop.</string>
    <string name="xyz">X\nY\nZ</string>

    <string name="accelerometer_heading">Accelerometer</string>
    <string name="accelerometer_desc">Orientation</string>
    <string name="altimeter_heading">Altimeter</string>
    <string name="altimeter_rate_desc">Current Rate</string>
    <string name="altimeter_gain_desc">Total Gain</string>
    <string name="altimeter_loss_desc">Total Loss</string>
    <string name="ambientlight_heading">Ambient Light</string>
    <string name="ambientlight_desc">Light Level</string>
    <string name="barometer_heading">Barometer</string>
    <string name="barometer_pressure_desc">Pressure</string>
    <string name="barometer_temp_desc">Temperature (F)</string>
    <string name="distance_heading">Distance</string>
    <string name="distance_total_desc">Total Distance</string>
    <string name="distance_speed_desc">Speed</string>
    <string name="distance_pace_desc">Pace</string>
    <string name="distance_mode_desc">Mode</string>
    <string name="gyroscope_heading">Gyroscope</string>
    <string name="gyroscope_accel_desc">Acceleration</string>
    <string name="gyroscope_angular_desc">Angular Velocity</string>
    <string name="heartrate_heading">Heart Rate Sensor</string>
    <string name="heartrate_rate_desc">Heart Rate</string>
    <string name="heartrate_locked_desc">Status</string>
    <string name="pedometer_heading">Pedometer</string>
    <string name="pedometer_desc">Total Steps</string>
    <string name="skintemp_heading">Skin Temperature Sensor</string>
    <string name="skintemp_desc">Skin Temperature (F)</string>
    <string name="ultraviolet_heading">UV Light Sensor</string>
    <string name="ultraviolet_desc">UV Index Level</string>
    <string name="contact_heading">Contact Sensor</string>
    <string name="contact_desc">Contact</string>
    <string name="calorie_heading">Calorie Sensor</string>
    <string name="calorie_desc">Total Calories</string>
    <string name="gsr_heading">Galvanic Skin Response Sensor</string>
    <string name="gsr_desc">Resistance</string>
    <string name="rr_heading">Resting Rate Sensor</string>
    <string name="rr_desc">Resting Rate</string>
</resources>
