<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <TextView
        android:id="@+id/heartrate_heading_text"
        style="@style/TextHeaderTheme"
        android:text="@string/heartrate_heading"/>

    <RelativeLayout
        android:id="@+id/heartrate_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heartrate_heading_text">

        <TextView
            android:id="@+id/heartrate_rate_desc"
            style="@style/TextTheme"
            android:layout_alignParentLeft="true"
            android:text="@string/heartrate_rate_desc"/>

        <TextView
            android:id="@+id/heartrate_rate_data"
            style="@style/TextTheme"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heartrate_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heartrate_layout_1">

        <TextView
            android:id="@+id/heartrate_gain_desc"
            style="@style/TextTheme"
            android:layout_alignParentLeft="true"
            android:text="@string/heartrate_locked_desc"/>

        <TextView
            android:id="@+id/heartrate_locked_data"
            style="@style/TextTheme"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>