<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/gyroscope_heading_text"
        style="@style/TextHeaderTheme"
        android:text="@string/gyroscope_heading"/>
    
    <RelativeLayout
        android:id="@+id/gyroscope_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gyroscope_heading_text">

        <TextView
            android:id="@+id/gyroscope_desc"
            style="@style/TextTheme"
            android:layout_alignParentLeft="true"
            android:text="@string/gyroscope_accel_desc"/>

        <TextView
            android:id="@+id/gyroscope_accel_data"
            style="@style/TextTheme"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gyroscope_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gyroscope_layout_1">

        <TextView
            android:id="@+id/gyroscope_angular_desc"
            style="@style/TextTheme"
            android:layout_alignParentLeft="true"
            android:text="@string/gyroscope_angular_desc"/>

        <TextView
            android:id="@+id/gyroscope_angular_data"
            style="@style/TextTheme"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>