<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/accelerometer_heading_text"
        style="@style/TextHeaderTheme"
        android:text="@string/accelerometer_heading"/>

    <TextView
        android:id="@+id/accelerometer_desc"
        style="@style/TextTheme"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/accelerometer_heading_text"
        android:text="@string/accelerometer_desc"/>

    <LinearLayout
        android:id="@+id/accelometer_layout_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerometer_heading_text"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight=".6"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:gravity="right"
                android:text="@string/xyz"/>

            <TextView
                android:id="@+id/accelerometer_data"
                style="@style/TextTheme"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:gravity="right"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>